Resolve merge conflicts and update quiz files

--- a/demo_1.html
+++ b/demo_1.html
@@ -729,7 +729,6 @@
 
       <div class="content">
         <form id="quizForm">
-
           <!-- QUESTION 1 -->
           <div class="question-block">
             <div class="question-number">1</div>
@@ -738,10 +737,20 @@
               <pre>print(Hello)</pre>
             </div>
             <div class="options">
-              <div class="option"><input type="radio" name="q1" value="A" /><label>Hello</label></div>
-              <div class="option"><input type="radio" name="q1" value="B" /><label>"Hello"</label></div>
-              <div class="option"><input type="radio" name="q1" value="C" /><label>print(Hello)</label></div>
-              <div class="option"><input type="radio" name="q1" value="D" /><label>Error</label></div>
+              <div class="option">
+                <input type="radio" name="q1" value="A" /><label>Hello</label>
+              </div>
+              <div class="option">
+                <input type="radio" name="q1" value="B" /><label>"Hello"</label>
+              </div>
+              <div class="option">
+                <input type="radio" name="q1" value="C" /><label
+                  >print(Hello)</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q1" value="D" /><label>Error</label>
+              </div>
             </div>
           </div>
 
@@ -753,38 +762,75 @@
               <pre>print(4 + 7)</pre>
             </div>
             <div class="options">
-              <div class="option"><input type="radio" name="q2" value="A" /><label>3</label></div>
-              <div class="option"><input type="radio" name="q2" value="B" /><label>11</label></div>
-              <div class="option"><input type="radio" name="q2" value="C" /><label>Error</label></div>
-              <div class="option"><input type="radio" name="q2" value="D" /><label>4</label></div>
+              <div class="option">
+                <input type="radio" name="q2" value="A" /><label>3</label>
+              </div>
+              <div class="option">
+                <input type="radio" name="q2" value="B" /><label>11</label>
+              </div>
+              <div class="option">
+                <input type="radio" name="q2" value="C" /><label>Error</label>
+              </div>
+              <div class="option">
+                <input type="radio" name="q2" value="D" /><label>4</label>
+              </div>
             </div>
           </div>
 
           <!-- QUESTION 3 -->
           <div class="question-block">
             <div class="question-number">3</div>
-            <div class="question-text">
-              What is a variable in Python?
-            </div>
+            <div class="question-text">What is a variable in Python?</div>
             <div class="options">
-              <div class="option"><input type="radio" name="q3" value="A" /><label>A program</label></div>
-              <div class="option"><input type="radio" name="q3" value="B" /><label>A function</label></div>
-              <div class="option"><input type="radio" name="q3" value="C" /><label>A container that stores values</label></div>
-              <div class="option"><input type="radio" name="q3" value="D" /><label>A type of error</label></div>
+              <div class="option">
+                <input type="radio" name="q3" value="A" /><label
+                  >A program</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q3" value="B" /><label
+                  >A function</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q3" value="C" /><label
+                  >A container that stores values</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q3" value="D" /><label
+                  >A type of error</label
+                >
+              </div>
             </div>
           </div>
 
           <!-- QUESTION 4 -->
           <div class="question-block">
             <div class="question-number">4</div>
-            <div class="question-text">
-              What is programming?
-            </div>
+            <div class="question-text">What is programming?</div>
             <div class="options">
-              <div class="option"><input type="radio" name="q4" value="A" /><label>Playing video games on a computer</label></div>
-              <div class="option"><input type="radio" name="q4" value="B" /><label>Writing step-by-step instructions for computers to follow</label></div>
-              <div class="option"><input type="radio" name="q4" value="C" /><label>Using social media applications</label></div>
-              <div class="option"><input type="radio" name="q4" value="D" /><label>Browsing the internet</label></div>
+              <div class="option">
+                <input type="radio" name="q4" value="A" /><label
+                  >Playing video games on a computer</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q4" value="B" /><label
+                  >Writing step-by-step instructions for computers to
+                  follow</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q4" value="C" /><label
+                  >Using social media applications</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q4" value="D" /><label
+                  >Browsing the internet</label
+                >
+              </div>
             </div>
           </div>
 
@@ -795,10 +841,26 @@
               Why is Python called a beginner-friendly language?
             </div>
             <div class="options">
-              <div class="option"><input type="radio" name="q5" value="A" /><label>It uses symbols only</label></div>
-              <div class="option"><input type="radio" name="q5" value="B" /><label>It is very long and complex</label></div>
-              <div class="option"><input type="radio" name="q5" value="C" /><label>It is close to English and easy to read</label></div>
-              <div class="option"><input type="radio" name="q5" value="D" /><label>It works only on mobile phones</label></div>
+              <div class="option">
+                <input type="radio" name="q5" value="A" /><label
+                  >It uses symbols only</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q5" value="B" /><label
+                  >It is very long and complex</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q5" value="C" /><label
+                  >It is close to English and easy to read</label
+                >
+              </div>
+              <div class="option">
+                <input type="radio" name="q5" value="D" /><label
+                  >It works only on mobile phones</label
+                >
+              </div>
             </div>
           </div>
 
@@ -818,12 +880,12 @@
 
     <script>
       const correctAnswers = {
-      q1: "D",
-      q2: "B",
-      q3: "C",
-      q4: "B",
-      q5: "C",
-    };
+        q1: "D",
+        q2: "B",
+        q3: "C",
+        q4: "B",
+        q5: "C",
+      };
 
       const QUIZ_DURATION = 180;
       let timeRemaining = QUIZ_DURATION;
