Updated code changes

--- a/demo_file.html
+++ b/demo_file.html
@@ -866,7 +866,7 @@ file.close()
               </div>
               <div class="option">
                 <input type="radio" name="q5" value="B" /><label
-                  >To save memory and data safely</label
+                  >To save memory by releasing system resources</label
                 >
               </div>
               <div class="option">
